--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.1",
     "mysql": "^2.15.0",
+    "nodemon": "^1.17.1",
     "watson-developer-cloud": "^2.40.0",
     "xmlhttprequest": "^1.8.0"
   },
